n-vm-macros/tests/compile_fail/tokio_test_attr.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm]
#[tokio::test]
async fn tokio_test_attr() {}

fn main() {}